--- a/AleynaBlog/Views/Blog/Index.cshtml
+++ b/AleynaBlog/Views/Blog/Index.cshtml
@@ -38,73 +38,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                 <section class="news-section padd-2">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            <!--News Style One-->
-                            <div class="news-style-one">
-                                <div class="inner-box">
-                                    <div class="image">
-                                        <img src="~/Content/Site/images/blog/1.jpg" alt="">
-                                        <div class="post-time">22 Jan, 2018</div>
-                                    </div>
-                                    <div class="lower-content">
-                                        <h3><a href="blog-details.html">We Make you to Grow your Business</a></h3>
-                                        <div class="text">
-                                            Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.
-                                        </div>
-                                        <div class="link-btn2 center">
-                                            <a href="blog-details.html" class="btn-style-two">Daha fazla Oku</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            <div class="news-style-one">
-                                <div class="inner-box">
-                                    <div class="image">
-                                        <img src="~/Content/Site/images/blog/2.jpg" alt="">
-                                        <div class="post-time">22 Jan, 2018</div>
-                                    </div>
-                                    <div class="lower-content">
-                                        <h3><a href="blog-details.html">We Make you to Grow your Business</a></h3>
-                                        <div class="text">
-                                            Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.
-                                        </div>
-                                        <div class="link-btn2 center">
-                                            <a href="blog-details.html" class="btn-style-two">Daha Fazla Oku</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            <!--News Style One-->
-                            <div class="news-style-one">
-                                <div class="inner-box">
-                                    <div class="image">
-                                        <img src="~/Content/Site/images/blog/3.jpg" alt="">
-                                        <div class="post-time">22 Jan, 2018</div>
-                                    </div>
-                                    <div class="lower-content">
-                                        <h3><a href="blog-details.html">We Make you to Grow your Business</a></h3>
-                                        <div class="text">
-                                            Consectetur adipiscing elit. Curabitur libero enim, lacinia finibus ante et, imperdiet finibus risus.
-                                        </div>
-                                        <div class="link-btn2 center">
-                                            <a href="blog-details.html" class="btn-style-two">Daha Fazla Oku</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-
-
-
-                    </div>
+                    @Html.Action("Article", "Blog")
 
                     <br>
                     <ul class="page_pagination style-2 center">
