--- a/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
+++ b/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
@@ -45,6 +45,9 @@
                     <li class="active">
                         <a href="@Url.Action("Create","AuthorAdmin")">Yazar Ekle</a>
                     </li>
+                    <li class="active">
+                        <a href="@Url.Action("ArticleIndex","AuthorAdmin")">Makaleler</a>
+                    </li>
 
                 </ul>
             </li>
