--- a/AleynaBlog/Views/Blog/Populer.cshtml
+++ b/AleynaBlog/Views/Blog/Populer.cshtml
@@ -1,14 +1,19 @@
-﻿<div class="popular_news sidebar-padd mar-1">
+﻿@using AleynaBlog.Models
+<div class="popular_news sidebar-padd mar-1">
     <div class="inner-title">
         <h3>En Fazla Okunanlar</h3>
     </div>
 
     <div class="popular-post">
-        <div class="item">
-            <div class="post-thumb"><a href="#"><img src="~/Content/Site/images/blog/1.jpg" alt=""></a></div>
-            <h4><a href="#">Credit Suisse CEO focuses on wealth manageme...</a></h4>
-            <div class="post-info">March 21, 2018 </div>
-        </div>
+        @foreach (Article makale in ViewBag.makalelerim)
+        {
+            <div class="item">
+                <div class="post-thumb"><a href="#"><img src="@makale.Image" alt=""></a></div>
+                <h4><a href="#">@makale.Contain</a></h4>
+                <div class="post-info">@makale.AddedDate </div>
+            </div>
+        }
+
         <div class="item">
             <div class="post-thumb"><a href="#"><img src="~/Content/Site/images/blog/2.jpg" alt=""></a></div>
             <h4><a href="#">Easy way to high global sotck marketin...</a></h4>
