--- a/AleynaBlog/Views/Blog/Article.cshtml
+++ b/AleynaBlog/Views/Blog/Article.cshtml
@@ -1,30 +1,34 @@
 ﻿@using AleynaBlog.Models;
+<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+    <section class="news-section padd-2">
+        <div class="row">
+            @foreach (Article article in ViewBag.makalelerim)
+            {
+                <div class="col-md-6 col-sm-6 col-xs-12" width="150" height="120">
 
-    <div class="row">
-        @foreach (Article article in ViewBag.makalelerim)
-        {
-            <div class="col-md-6 col-sm-6 col-xs-12">
-                News Style One
-                <div class="news-style-one">
-                    <div class="inner-box">
-                        <div class="image">
-                            <img src=@article.Image alt="">
-                            <div class="post-time">@article.AddedDate</div>
-                        </div>
-                        <div class="lower-content">
-                            <h3><a href="blog-details.html">@article.Title</a></h3>
-                            <div class="text">
-                                @article.Contain
+                    <div class="news-style-one">
+                        <div class="inner-box">
+                            <div class="image">
+                                <img src=@article.Image alt="" width="150" height="120">
+                                <div class="post-time">@article.AddedDate</div>
                             </div>
-                            <div class="link-btn2 center">
-                                <a href="blog-details.html" class="btn-style-two">Daha fazla Oku</a>
+                            <div class="lower-content">
+                                <h3><a href="blog-details.html">@article.Title</a></h3>
+                                @*<div class="text">
+                                        @article.Contain
+                                    </div>*@
+                                <div class="link-btn2 center">
+                                    <a href="blog-details.html" class="btn-style-two">Daha fazla Oku</a>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
-
-            </div>
-        }
+            }
 
 
-    </div>
+        </div>
+    </section>
+</div>
+
