--- a/AleynaBlog/Views/Blog/AddArticle.cshtml
+++ b/AleynaBlog/Views/Blog/AddArticle.cshtml
@@ -3,7 +3,7 @@
 @using AleynaBlog.Models
 @{
     ViewBag.Title = "AddArticle";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    //Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 
