--- a/AleynaBlog/Views/Blog/Index.cshtml
+++ b/AleynaBlog/Views/Blog/Index.cshtml
@@ -43,13 +43,13 @@
                 </section>
             </div>
             <br>
-            <ul class="page_pagination style-2 center">
+            @*<ul class="page_pagination style-2 center">
                 <li><a href="#" class="tran3s"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
                 <li><a href="#" class="active tran3s">1</a></li>
                 <li><a href="#" class="tran3s">2</a></li>
                 <li><a href="#" class="tran3s">3</a></li>
                 <li><a href="#" class="tran3s"><i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
-            </ul>
+            </ul>*@
 
 
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
