--- a/AleynaBlog/Views/Home/About.cshtml
+++ b/AleynaBlog/Views/Home/About.cshtml
@@ -16,7 +16,7 @@
                         projeler geliştirmekteyim. Aktif iş arayışındayım ve kendimi yazılım konusunda daha da geliştirmek
                         istiyorum. Takım çalışmalarına kolaylıkla adapte olabileceğime inanıyorum ve backend kısmında kendime güveniyorum.
                     </div>
-                    <div class="link-btn"><a href="about.html" class="btn-style-two">Daha Fazla Oku <span class="fa fa-long-arrow-right"></span></a></div>
+                    <div class="link-btn"><a href="@Url.Action("Index","About")" class="btn-style-two">Daha Fazla Oku <span class="fa fa-long-arrow-right"></span></a></div>
                 </div>
             </div>
         </div>
@@ -28,25 +28,7 @@
 </section><section class="about-style-one">
     <div class="outer-box clearfix">
 
-        <!--Content Column-->
-        <div class="content-column clearfix">
-            <div class="content-box">
-                <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
-                    <!--Section Title-->
-                    <div class="sec-title">
-                        <h2>Hakkımda </h2>
-                    </div>
-                    <div class="text">
-                        Merhabalar, ben Karadeniz Teknik Üniversitesi Bilgisayar Mühendisliği bölümüne 2015 yılında başladım.
-                        Bir sene hazırlık okuduktan sonra bu dönem  2020 yılında mezun oldum, eğitim hayatım boyunca çok fazla proje geliştirdim,
-                        bu süreçte  C, C++, Java, PHP, HTML, CSS, SQL, MATLAB ve Python dillerini kullandım. Şu sıralar Android Mobil uygulama ve asp.net ile MVC
-                        projeler geliştirmekteyim. Aktif iş arayışındayım ve kendimi yazılım konusunda daha da geliştirmek
-                        istiyorum. Takım çalışmalarına kolaylıkla adapte olabileceğime inanıyorum ve backend kısmında kendime güveniyorum.
-                    </div>
-                    <div class="link-btn"><a href="about.html" class="btn-style-two"> Daha Fazla Oku <span class="fa fa-long-arrow-right"></span></a></div>
-                </div>
-            </div>
-        </div>
+       
 
         <!--Image Column-->
         <div class="image-column" style="background-image:url(images/resource/about.jpg);"><div class="image"><img src="images/resource/about.jpg" alt=""></div><a href="https://www.youtube.com/watch?v=G0dzLanYW1E" class="overlay-link video-fancybox"><span class="icon fa fa-play"></span></a></div>
