--- a/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
+++ b/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
@@ -45,6 +45,16 @@
                     <li class="active">
                         <a href="@Url.Action("Create","AuthorAdmin")">Yazar Ekle</a>
                     </li>
+
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:void(0);" class="menu-toggle">
+                    <i class="material-icons col-purple">edit</i>
+                    <span>Makale Yönetimi</span>
+                </a>
+                <ul class="ml-menu">
+                    
                     <li class="active">
                         <a href="@Url.Action("ArticleIndex","AuthorAdmin")">Makaleler</a>
                     </li>
@@ -114,7 +124,7 @@
                     </li>
                 </ul>
             </li>
-                            
+
             <li>
                 <a href="javascript:void(0);" class="menu-toggle">
                     <i class="material-icons">trending_down</i>
