--- a/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
+++ b/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
@@ -36,7 +36,7 @@
             <li>
                 <a href="javascript:void(0);" class="menu-toggle">
                     <i class="material-icons col-purple">edit</i>
-                    <span>Yazar Yönetimi</span>
+                    <span>Admin Yönetimi</span>
                 </a>
                 <ul class="ml-menu">
                     <li class="active">
