--- a/AleynaBlog/Views/AuthorAdmin/ArticleIndex.cshtml
+++ b/AleynaBlog/Views/AuthorAdmin/ArticleIndex.cshtml
@@ -47,13 +47,13 @@
 
                                 <td>
                                     
-                                    @*<a class="btn bg-purple waves-effect" data-toggle="tooltip" data-placement="top" title="" data-original-title="Düzenle"
-                                       href="@Url.Action("Edit", "AuthorAdmin" , new {id=item.Id })">  <i class="material-icons">mode_edit</i></a>*@
+                                    <a class="btn bg-purple waves-effect" data-toggle="tooltip" data-placement="top" title="" data-original-title="Düzenle"
+                                       href="@Url.Action("ArticleEdit", "AuthorAdmin" , new {id=item.Id })">  <i class="material-icons">mode_edit</i></a>
 
                                     <a class="btn bg-red waves-effect" data-target="#deleteArticle" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sil"
                                        onclick="JavaSend(@item.Id)"> <i class="material-icons">delete</i></a>
 
-                                    @*<a class="btn bg-red waves-effect" data-target="#deleteAuthor" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sil" onclick="JavaSend(@item.Id)">  <i class="material-icons">delete</i></a>*@
+                                   
 
                                     <script>
                                         function JavaSend(id) {
