--- a/AleynaBlog/Views/AuthorAdmin/Edit.cshtml
+++ b/AleynaBlog/Views/AuthorAdmin/Edit.cshtml
@@ -70,14 +70,14 @@
                     </div>
 
                     @*-------------Admin mi degil mi checkbox-------------------*@
-                    <div class="form-group">
+                    @*<div class="form-group">
                         @Html.RadioButton("Role", "Admin", new { @checked = true, @id = "admin" })
-                        @*<input type="radio" name="gender" id="male" class="with-gap">*@
+                        <input type="radio" name="gender" id="male" class="with-gap">
                         <label for="admin">Admin</label>
                         @Html.RadioButton("Role", "Admin", new { @id = "user" })
                         <input type="radio" name="gender" id="female" class="with-gap">
                         <label for="user" class="m-l-20">Kullanıcı</label>
-                    </div>
+                    </div>*@
                     @*<----------------------------------->*@
                     <br>
                     <div align="center">
