--- a/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
+++ b/AleynaBlog/Views/Shared/_LeftsideBar.cshtml
@@ -40,10 +40,10 @@
                 </a>
                 <ul class="ml-menu">
                     <li class="active">
-                        <a href="@Url.Action("Index","AuthorAdmin")">Yazarlar</a>
+                        <a href="@Url.Action("Index","AuthorAdmin")">Adminler</a>
                     </li>
                     <li class="active">
-                        <a href="@Url.Action("Create","AuthorAdmin")">Yazar Ekle</a>
+                        <a href="@Url.Action("Create","AuthorAdmin")">Admin Ekle</a>
                     </li>
 
                 </ul>
